// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListAction Snapshot matches snapshot in disabled state 1`] = `
<div
  class="ods-list-action__container"
>
  <button
    class="ods-list-action ods-list-action--disabled ods-list-action--card"
    data-testid="list-action"
    disabled=""
    type="button"
  >
    <div
      class="ods-list-action__content"
    >
      <div
        class="ods-content-list"
      >
        <p
          class="ods-typography ods-typography__paragraph ods-typography__paragraph--default"
        >
          Test Title
        </p>
      </div>
    </div>
    <div
      class="ods-list-action__action"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M7.293 14.707a1 1 0 0 1 0-1.414L10.586 10 7.293 6.707a1 1 0 0 1 1.414-1.414l4 4a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414 0z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ListAction Snapshot matches snapshot in loading state 1`] = `
<div
  class="ods-list-action__container"
>
  <button
    class="ods-list-action ods-list-action--loading ods-list-action--card"
    data-testid="list-action"
    disabled=""
    type="button"
  >
    <div
      class="ods-list-action__skeleton"
    >
      <div
        class="ods-skeleton-bar"
        style="width: 40%; height: 16px;"
      />
      <div
        class="ods-skeleton-bar"
        style="width: 100%; height: 16px;"
      />
    </div>
  </button>
</div>
`;

exports[`ListAction Snapshot matches snapshot with all props 1`] = `
<div
  class="ods-list-action__container"
>
  <button
    class="ods-list-action test-class ods-list-action--card"
    data-testid="list-action"
    type="button"
  >
    <div
      class="ods-list-action__content"
    >
      <div
        class="ods-list-action__icon"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 4H4v16h16V4zm0 16L4 4l16 16zm0-16L4 20 20 4z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
      <div
        class="ods-content-list"
      >
        <p
          class="ods-typography ods-typography__paragraph ods-typography__paragraph--default"
        >
          Test Title
        </p>
        <p
          class="ods-typography ods-typography__description"
        >
          Test Description
        </p>
        <p
          class="ods-typography ods-typography__captionbold"
        >
          Test Caption
        </p>
      </div>
      <div
        class="ods-list-action__indicator"
      >
        <div
          class="ods-tag ods-tag--medium ods-tag--medium__with-icon ods-tag--positive"
          role="Tag"
        >
          <svg
            aria-hidden="true"
            class="ods-tag__icon"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 20 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm3.707-9.293a1 1 0 0 0-1.414-1.414L9 10.586 7.707 9.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="ods-tag__content"
          >
            New
          </div>
        </div>
      </div>
    </div>
    <div
      class="ods-list-action__action"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M7.293 14.707a1 1 0 0 1 0-1.414L10.586 10 7.293 6.707a1 1 0 0 1 1.414-1.414l4 4a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414 0z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ListAction Snapshot matches snapshot with default props 1`] = `
<div
  class="ods-list-action__container"
>
  <button
    class="ods-list-action ods-list-action--card"
    data-testid="list-action"
    type="button"
  >
    <div
      class="ods-list-action__content"
    >
      <div
        class="ods-content-list"
      >
        <p
          class="ods-typography ods-typography__paragraph ods-typography__paragraph--default"
        >
          Test Title
        </p>
      </div>
    </div>
    <div
      class="ods-list-action__action"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M7.293 14.707a1 1 0 0 1 0-1.414L10.586 10 7.293 6.707a1 1 0 0 1 1.414-1.414l4 4a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414 0z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </button>
</div>
`;
